// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalFilterAlert react-testing-library should NOT render with Ansible Automation Platform 1`] = `<DocumentFragment />`;

exports[`GlobalFilterAlert react-testing-library should NOT render with not selected SAP 1`] = `<DocumentFragment />`;

exports[`GlobalFilterAlert react-testing-library should Not render with SAP and Ansible Automation Platform 1`] = `<DocumentFragment />`;

exports[`GlobalFilterAlert react-testing-library should not render when empty 1`] = `<DocumentFragment />`;

exports[`GlobalFilterAlert react-testing-library should render with Ansible Automation Platform 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: Ansible Automation Platform. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalFilterAlert react-testing-library should render with Ansible Automation Platform with both filters 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: Ansible Automation Platform. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalFilterAlert react-testing-library should render with SAP 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: SAP. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalFilterAlert react-testing-library should render with SAP and Ansible Automation Platform 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: Ansible Automation Platform, SAP. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalFilterAlert react-testing-library should render with SAP and filters 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: SAP. SAP ID (SID): AB1, XY1. Tags: patch: rest=patchman-engine, dev=patchman-engine. insights-client: group=XmygroupX. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalFilterAlert react-testing-library should render with SAP with both filters 1`] = `
<DocumentFragment>
  <div
    aria-label="Info Alert"
    class="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </div>
    <h4
      class="pf-c-alert__title"
    >
      <span
        class="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Your systems are pre-filtered by the global context selector.
    </h4>
    <div
      class="pf-c-alert__description"
    >
      <p>
        Workloads: SAP. 
      </p>
    </div>
  </div>
</DocumentFragment>
`;
